--- a/modules/custom/form_example/form_example.routing.yml
+++ b/modules/custom/form_example/form_example.routing.yml
@@ -4,7 +4,7 @@ form_example.addform:
     _title: 'Add Form'
     _form: '\Drupal\form_example\Form\addform'
   requirements:
-    _permission: 'access content'
+    _permission: 'form_example crear nuevo registro'
 
 form_example.mostrartodo:
   path: '/form_example'
@@ -12,7 +12,7 @@ form_example.mostrartodo:
     _controller: '\Drupal\form_example\Controller\Form_exampleController::mostrartodo'
     _title: 'Datos Personales'
   requirements:
-    _permission: 'access content'
+    _permission: 'form_example acceder a vista Datos personales'
 
 form_example.editform:
   path: '/form_example/{arg}/edit'
@@ -20,7 +20,7 @@ form_example.editform:
     _title: 'Edit Form'
     _form: '\Drupal\form_example\Form\editform'
   requirements:
-    _permission: 'access content'
+    _permission: 'form_example editar nuevo registro'
 
 form_example.deleteform:
   path: '/form_example/{arg}/delete'
@@ -28,7 +28,7 @@ form_example.deleteform:
     _title: '¿Deseas eliminar este registro?'
     _form: '\Drupal\form_example\Form\deleteform'
   requirements:
-    _permission: 'access content'
+    _permission: 'form_example eliminar registro'
 
 form_example.mostrarunregistro:
   path: '/form_example/{arg}'
@@ -36,4 +36,4 @@ form_example.mostrarunregistro:
     _controller: '\Drupal\form_example\Controller\Form_exampleController::mostrarunregistro'
     _title: 'Información Personal'
   requirements:
-    _permission: 'access content'
+    _permission: 'form_example ver un registro'
